[gd_scene load_steps=3 format=3 uid="uid://clibabhm3w6wb"]

[ext_resource type="Script" path="res://scripts/setup_remote_game.gd" id="1_8x3dn"]
[ext_resource type="Theme" uid="uid://bmnlkeb5yfupy" path="res://resources/default_theme.tres" id="1_rp3iy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rp3iy")
script = ExtResource("1_8x3dn")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.58
anchor_right = 0.58
offset_left = -375.0
offset_top = 945.5
offset_right = 294.0
offset_bottom = 1674.5
text = "Connecting..."

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -38.5
offset_right = 147.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
text = "Join Game"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_right = 800.0
offset_bottom = 738.0

[node name="count" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -729.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="count"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 42

[node name="lower" type="Button" parent="count/HBoxContainer"]
layout_mode = 2
text = " < "

[node name="players" type="Label" parent="count/HBoxContainer"]
layout_mode = 2
text = "Players:"

[node name="count" type="Label" parent="count/HBoxContainer"]
layout_mode = 2
text = "2"

[node name="raise" type="Button" parent="count/HBoxContainer"]
layout_mode = 2
text = " > "

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="count/HBoxContainer/lower" to="." method="_on_lower_pressed"]
[connection signal="pressed" from="count/HBoxContainer/raise" to="." method="_on_raise_pressed"]
